[gd_scene load_steps=3 format=2]

[ext_resource path="res://map/charges/Charge.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=3]
resource_local_to_scene = true
radius = 8.0

[node name="Charge" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="FizzleTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="SpawnTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.25
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Charge_body_entered"]
[connection signal="timeout" from="FizzleTimer" to="." method="_on_FizzleTimer_timeout"]
